src/style/style.css
/* ... */
.ZeffyFormIFrame {
  width: 100%;
  height: 100%;
  border: none;
}

.sideToSide {
  width: 100%;
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  margin-bottom: 3.5rem;
}

.coloredBG.dark a{
  color:var(--color_base_dark)
}
.coloredBG.dark a:hover{
  color:var(--color_accent);
}

.LogoLink_Text img{
  min-height:3em;
}

.fullLogoLink img{
  min-height:8em;
}


/**Begin media queries*/
@media (min-width: 768px) {
  nav.innerDrawer {
    position: static;
    width: auto;
    height: auto;
    flex-direction: row;
    background-color: transparent;
    box-shadow: none;
  }
  .MenuButton {
    display: none;
  }
  header {
    flex-direction: row;
    background-color: var(--color_base);
  }
  header.shadowAdded {
    box-shadow: 4px 4px 10px -6px var(--color_font);
  }
  header.outerDrawer {
    position: sticky;
    top: 0;
    z-index: 8;
  }
  header > a {
    margin-bottom: 0;
    padding: 0;
  }
  .fullLogoLink img {
    max-width: 250px;
  }
  .LogoLink_Text img {
    max-width: 100px;
  }

  .LogoLink_Text {
    display: block;
  }
  .fullLogoLink.hideME {
    display: none !important;
  }
  #root {
    overflow-x: initial;
    padding-top: 0;
  }

  .sideToSide {
    flex-direction: row;
    margin: 0 1rem 2rem;
    width: calc(100% - 2rem);
    gap: 1rem;
  }

  .sideToSide section,
  .sideToSide div {
    width: calc(50% - 0.5em);
    padding: 0 0.5rem;
  }
  form.sideToSide {
    flex-wrap: wrap;
  }
  form.sideToSide div {
    width: calc(50% - 1.5em);
  }
  form.sideToSide div p {
    white-space: nowrap;
    text-align: left;
  }

  form.sideToSide .contactInfo p label {
    text-align: right;
    width: 25%;
    display: inline-block;
  }
  form.sideToSide .contactInfo p input {
    text-align: left;
    width: 75%;
    display: inline-block;
  }
  .contactInfo {
    margin-top: 1.75rem;
  }
  #PhoneInfo{background-color: var(--color_base_dark);margin-bottom:0;}
  .sideToSide section.light, #PhoneInfo, #WhoWeAre {
    background-color: var(--color_base_dark);
    padding: 0.66rem 0.5rem;
    border-radius: 0.25em;
    box-shadow: 4px 4px 10px -6px var(--color_font),
      -4px -4px 10px -6px var(--color_base_dark);
  }
  p.sendButtonWrapper {
    width: 100%;
  }

  #ProjectList {
    display: flex;
    justify-content: center;
    /* align-items: baseline; */
    flex-wrap: wrap;
    gap:2em;
  }
  #ProjectList h1 {
    width: 100%;
  }
  #ProjectList h2 {
    width: 100%;
  }
  
  .projectCard {
    max-width: 42%;
  }

  .ZeffyFormWrapper {
    height: 1695px;
  }
}

@media (min-width: 1080px) {
  header {
    justify-content: space-evenly;
  }
  .sideToSide {
    justify-content: space-evenly;
  }
  .sideToSide section {
    width: calc(40% - 0.5em);
  }
  #ProjectList {
    align-items: normal;
  }
  .projectCard {
    max-width: 28%;
  }
  .ZeffyFormWrapper {
    height: 1478px;
  }
 
}

@media (min-width: 1280px) {
  .projectCard {
    max-width: 22%;
  }
  #TheMission p {
      max-width: 1080px;
      margin: 0 auto;
      text-wrap:wrap;
  }

}

